[gd_scene load_steps=7 format=3 uid="uid://d3282iyq1bnbx"]

[ext_resource type="Script" path="res://ui/sell_ui.gd" id="1_ni1yc"]
[ext_resource type="PackedScene" uid="uid://budhhix56t71m" path="res://ui/inspected_item_ui.tscn" id="4_7jsls"]
[ext_resource type="LabelSettings" uid="uid://bkgfirxbljc1d" path="res://assets/font/font_ui.tres" id="5_3a1xm"]
[ext_resource type="FontFile" uid="uid://cxvusk35yis3l" path="res://assets/font/Dadlygood.otf" id="6_7rjfb"]

[sub_resource type="LabelSettings" id="LabelSettings_evoel"]
font = ExtResource("6_7rjfb")
font_size = 20
font_color = Color(0, 1, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f1kkl"]
font = ExtResource("6_7rjfb")
font_size = 20
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="SellPrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ni1yc")

[node name="InspectedItemUI" parent="." instance=ExtResource("4_7jsls")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_top = -110.0
offset_right = 177.0
offset_bottom = 240.0
grow_horizontal = 2
scale = Vector2(0.6, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = 112.0
offset_right = 113.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sell [item.name]
for [sell_price] currency?"
label_settings = ExtResource("5_3a1xm")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "
"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Yes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -7.5
offset_right = 12.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Yes"
label_settings = SubResource("LabelSettings_evoel")

[node name="No" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/No"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -7.5
offset_right = 8.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No"
label_settings = SubResource("LabelSettings_f1kkl")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
